5-demo-deploy-llm/overlays/granite34b/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: vllm-vllm-granite34b
  namespace: demo-multi-node-multi-gpu
  labels:
    app: isvc.vllm-vllm-granite34b-predictor
    component: predictor
    isvc.generation: "1"
    serving.kserve.io/inferenceservice: vllm-vllm-granite34b
  annotations:
    openshift.io/host.generated: "true"
spec:
  to:
    kind: Service
    name: vllm-vllm-granite34b-predictor
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
